-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1084 2011-06-08 19:35:14 guru Exp $
-----------------------------------------------------------------------------------------

2011-06-08	pwessel
	* xgrid/xgrid_Panner.c:	Eliminate "cast to pointer from integer of different size"
				by casting the value via (ptrdiff_t) [Thanks to L. Parkes].

2011-06-07	pwessel
	* gmt.conf:		No longer a PS_DPI setting in GMT since we use a fixed 7200.
	* -B:			Now accepts +g<fill> to paint the canvas before plotting.
				Makes psbasemap -G<fill> obsolete.

2011-06-05	pwessel
	* nearneighbor_func.c:	For global region in longitudes, cannot extend w/e limits
				as we do for Cartesian and region-limited areas.
	* gmt_init.c:		Moved the PSL_beginsession call to GMT_plotinit so that the
				any --PS_* defaults have been parsed.

2011-06-05	jluis
	* gmtmath.c:		New operator DIFF that works similar to the function with the
				same name in Matlab.

2011-06-04	pwessel
	* gmt_plot.c:		Eliminated notch in corners of linear map frames and color bars.
	* psscale_func.c:	Make triangular extension be seamless with the rest of bar outline.

2011-06-02	pwessel
	* psscale_func.c:	Enhanced -E to accept optional +n[<label>] which will
				plot a NaN-color rectangle at the start of the bar, and
				label it with <label> [NaN].

2011-06-02	pwessel
	* grdfilter_func.c:	Added rectangular filtering and automatic resampling to
				input resolution for high-pass filters.  Added impulse
				response script to test suite.

2011-06-02	remko
	* pslib.c:		Smarter version of psl_shorten_path produces more straight
				line segments.
	* test/*/orig/*.ps, doc/fig/*.ps:	Updates as result of psl_shorten_path change.
	* psxy[z]_func.c:	Corrected inadvertent scaling of angles when PROJ_LENGTH_UNIT=cm
	* grdsample_func.c:	Fixed several bugs related to wrapping of periodical grids.

2011-06-01	pwessel