@@ -1,6 +1,6 @@
 #!/bin/bash
 #		GMT EXAMPLE 29
-#		$Id: job29.sh,v 1.6 2011-03-15 02:06:31 guru Exp $
+#		$Id: job29.sh,v 1.7 2011-06-09 04:12:31 guru Exp $
 #
 # Purpose:	Illustrates spherical surface gridding with Green's function of splines
 # GMT progs:	makecpt, grdcontour, grdgradient, grdimage, grdmath greenspline, psscale, pstext
@@ -28,17 +28,17 @@ grdmath mars.nc 1000 DIV PROJ_ELLIPSOID.nc SUB = mars.nc
 grdmath mars2.nc 1000 DIV PROJ_ELLIPSOID.nc SUB = mars2.nc
 makecpt -Crainbow -T-7/15/22 -Z > mars.cpt
 grdgradient mars2.nc -fg -Ne0.75 -A45 -Gmars2_i.nc
-grdimage mars2.nc -Imars2_i.nc -Cmars.cpt -B30g30Wsne -JH0/6i -P -K -Ei \
-	-U"Example 29 in Cookbook" --FONT_ANNOT_PRIMARY=12p > $ps
+grdimage mars2.nc -Imars2_i.nc -Cmars.cpt -B30g30Wsne -JH0/7i -P -K -Ei \
+	-U"Example 29 in Cookbook" --FONT_ANNOT_PRIMARY=12p -Xc > $ps
 grdcontour mars2.nc -J -O -K -C1 -A5 -Glz+/z- >> $ps
 psxy -Rg -J -O -K -Sc0.045i -Gblack mars370.in  >> $ps
-echo "0 90 b)" | pstext -R -J -O -K -N -D-3i/-0.2i -F+f14p,Helvetica-Bold+jLB >> $ps
+echo "0 90 b)" | pstext -R -J -O -K -N -D-3.5i/-0.2i -F+f14p,Helvetica-Bold+jLB >> $ps
 grdgradient mars.nc -fg -Ne0.75 -A45 -Gmars_i.nc
-grdimage mars.nc -Imars_i.nc -Cmars.cpt -B30g30Wsne -J -O -K -Y3.6i -Ei \
+grdimage mars.nc -Imars_i.nc -Cmars.cpt -B30g30Wsne -J -O -K -Y4.2i -Ei \
 	--FONT_ANNOT_PRIMARY=12p >> $ps
 grdcontour mars.nc -J -O -K -C1 -A5 -Glz+/z- >> $ps
 psxy -Rg -J -O -K -Sc0.045i -Gblack mars370.in  >> $ps
-psscale -Cmars.cpt -O -K -D3i/-0.1i/5i/0.1ih -I --FONT_ANNOT_PRIMARY=12p -B2f1/:km: >> $ps
-echo "0 90 a)" | pstext -R -J -O -N -D-3i/-0.2i -F+f14p,Helvetica-Bold+jLB >> $ps
+psscale -Cmars.cpt -O -K -D3.5i/-0.15i/6i/0.1ih -I --FONT_ANNOT_PRIMARY=12p -B2f1/:km: >> $ps
+echo "0 90 a)" | pstext -R -J -O -N -D-3.5i/-0.2i -F+f14p,Helvetica-Bold+jLB >> $ps
 # Clean up
 rm -f *.nc mars.cpt
